--- a/general.css
+++ b/general.css
@@ -69,10 +69,12 @@ p > a {
 }
 
 .headerButtons > li > a:hover {
+    transition-duration: 0.4s;
     color: aqua;
 }
 
 .headerButtons > li > a > img:hover {
+    transition-duration: 0.4s;
     filter: brightness(0) saturate(100%) invert(86%) sepia(12%) saturate(7494%) hue-rotate(127deg) brightness(103%) contrast(106%);
 }
 
@@ -89,6 +91,10 @@ p > a {
     width: fit-content;
     justify-content: flex-end;
     margin-right: 5%;
+}
+
+.shell {
+    padding-bottom: 5%;
 }
 
 .info {
