--- a/index.css
+++ b/index.css
@@ -21,7 +21,14 @@
     margin: 0% 0% 0% 0%;
 }
 
-.viewer {
+.background > model-viewer {
+    padding: 0% 0% 0% 20%;
+    width: 100%;
+    height: 100%;
+}
+
+.background > img {
+    object-fit: contain;
     padding: 0% 0% 0% 20%;
     width: 100%;
     height: 100%;
@@ -31,4 +38,12 @@
     padding: 0% 70% 0% 0%;
     height: 50%;
     background-color: black;
+}
+
+content > section {
+    margin: 0% 0% 0% 0%;
+}
+
+.content > p {
+    text-shadow: 0px 1px black;
 }
