--- a/pages/timeline/timeline.css
+++ b/pages/timeline/timeline.css
@@ -16,22 +16,6 @@ button, h1, p {
     border: none;
 }
 
-header {
-    position: sticky;
-    top: 0;
-    background-color: #272727;
-    height: 3em;
-    display: flex;
-    justify-content: space-between;
-}
-
-footer {
-    position: sticky;
-    top: 0;
-    background-color: #272727;
-    display: flex;
-    height: 3em;
-}
 
 .headerButton {
     font-size: larger;
@@ -50,13 +34,8 @@ footer {
     margin-right: 5%;
 }
 
-.info {
-    width: 50%;
-}
-
-.logo {
-    width: 3em;
-    height: 3em;
+.content {
+    margin: 10% 0% 0% 0%;
 }
 
 .mediaContainer {
